# kraken-client

./: .gitignore  .graphqlrc  README.md  pyproject.toml
energy_api/: __init__.py  credentials.py  fail.py  gql_client.py  kraken_rest_client.py  main.py
energy_api/gql/: schema.gql
energy_api/rest_api_models/: account_models.py  consumption_models.py
gql/: accountDetails.gql  genSecretKey.gql  getAccountInfo.gql  getKrakenTokenAPIKey.gql  getKrakenTokenEmailPassword.gql  getToken.gql
graphql_client/: __init__.py  account_agreement_and_meter_details.py  client.py  enums.py  generate_secret_key.py  get_account_info.py  get_kraken_token.py  get_kraken_token_api_key.py  get_kraken_token_email_password.py  input_types.py
